Revise the Take Damage roll
Attach the type to each given value so that it doesn't really matter
if we are missing some parts. Hopefully this'll stop Nevil from
screwing it up anymore by skipping through the damage types in under
a nanosecond.

Also ignore empty elements in character lists, so trailing commas won't
fail the whole ability.

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -192,7 +192,7 @@
                     </div>
 
                     <div class="sheet-row sheet-padb sheet-center">
-                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Take_Damage" value="!barbs dmg $@{character_name}$ ?{Physical|0} ?{Psychic|0} ?{Fire|0} ?{Water|0} ?{Earth|0} ?{Air|0} ?{Ice|0} ?{Lightning|0} ?{Light|0} ?{Dark|0}">Take Damage</button>
+                        <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Take_Damage" value="!barbs dmg $@{character_name}$ physical:?{Physical|0} psychic:?{Psychic|0} fire:?{Fire|0} water:?{Water|0} earth:?{Earth|0} air:?{Air|0} ice:?{Ice|0} lightning:?{Lightning|0} light:?{Light|0} dark:?{Dark|0}">Take Damage</button>
                         <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Condition_Resist" value="!barbs cr $@{character_name}$ ?{Condition|General|Bleeding|Blinded|Burned|Charmed|Confused|Crippled|Cursed|Decreased Stats|Fear|Frozen|Helpless|Immobilized|Knocked Down (Prone)|Knocked Up (Airborne)|Paralyzed|Petrified|Poisoned|Silenced|Sleeping|Slowed|Stunned|Taunted|Weakened}">Condition Resist</button>
                         <button type="roll" class="sheet-col-7-24 sheet-center sheet-initiative sheet-large-button" name="roll_Concentration" value="!barbs concentration $@{character_name}$">Concentration</button>
                     </div>
@@ -630,7 +630,7 @@
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_ac" value="!barbs dmg $@{character_name}$ ?{Physical|0} ?{Psychic|0} ?{Fire|0} ?{Water|0} ?{Earth|0} ?{Air|0} ?{Ice|0} ?{Lightning|0} ?{Light|0} ?{Dark|0}"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_ac" value="!barbs dmg $@{character_name}$ physical:?{Physical|0} psychic:?{Psychic|0} fire:?{Fire|0} water:?{Water|0} earth:?{Earth|0} air:?{Air|0} ice:?{Ice|0} lightning:?{Lightning|0} light:?{Light|0} dark:?{Dark|0}"></button>
                         </div>
                         <div class="sheet-col-1-8 sheet-align-center">&nbsp;</div>
                     </div>
@@ -658,7 +658,7 @@
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_magic_resist" value="!barbs dmg $@{character_name}$ ?{Physical|0} ?{Psychic|0} ?{Fire|0} ?{Water|0} ?{Earth|0} ?{Air|0} ?{Ice|0} ?{Lightning|0} ?{Light|0} ?{Dark|0}"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_magic_resist" value="!barbs dmg $@{character_name}$ physical:?{Physical|0} psychic:?{Psychic|0} fire:?{Fire|0} water:?{Water|0} earth:?{Earth|0} air:?{Air|0} ice:?{Ice|0} lightning:?{Lightning|0} light:?{Light|0} dark:?{Dark|0}"></button>
                         </div>
                         <div class="sheet-col-1-8 sheet-align-center">&nbsp;</div>
                     </div>
