Add elemental MR stats to character sheet
Also:
* Make AC stat roll show current AC, rather than doing a Take Damage roll
* Make MR stat roll show general and elemental MRs, rather than doing
  a Take Damage roll
* Chat concentration checks as the character

--- a/barbs_character_sheet/Barbs.html
+++ b/barbs_character_sheet/Barbs.html
@@ -520,7 +520,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -630,7 +630,7 @@
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_ac" value="!barbs dmg $@{character_name}$ physical:?{Physical|0} psychic:?{Psychic|0} fire:?{Fire|0} water:?{Water|0} earth:?{Earth|0} air:?{Air|0} ice:?{Ice|0} lightning:?{Lightning|0} light:?{Light|0} dark:?{Dark|0}"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_ac" value="!barbs stat $@{character_name}$ AC"></button>
                         </div>
                         <div class="sheet-col-1-8 sheet-align-center">&nbsp;</div>
                     </div>
@@ -658,7 +658,7 @@
                         </div>
                         <div class="sheet-col-1-24 sheet-align-center">&nbsp;</div>
                         <div class="sheet-col-1-12">
-                            <button class="sheet-skill-roll" type="roll" name="roll_magic_resist" value="!barbs dmg $@{character_name}$ physical:?{Physical|0} psychic:?{Psychic|0} fire:?{Fire|0} water:?{Water|0} earth:?{Earth|0} air:?{Air|0} ice:?{Ice|0} lightning:?{Lightning|0} light:?{Light|0} dark:?{Dark|0}"></button>
+                            <button class="sheet-skill-roll" type="roll" name="roll_magic_resist" value="!barbs stat $@{character_name}$ Magic_Resist"></button>
                         </div>
                         <div class="sheet-col-1-8 sheet-align-center">&nbsp;</div>
                     </div>
@@ -670,7 +670,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -823,7 +823,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -891,7 +891,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -944,7 +944,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -1024,7 +1024,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -1097,7 +1097,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -1167,7 +1167,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -1233,6 +1233,109 @@
                 </div>
             </div>
 
+            <h4 class="sheet-center">Specific Magic Resists</h4>
+            <div class="sheet-row sheet-padb">
+                <!-- left column -->
+                <div class="sheet-col-1-2 sheet-padr">
+                    <div class="sheet-row sheet-sub-header">
+                        <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-small-label">Stat</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
+                        <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
+                    </div>
+
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-24">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-skill-name">Fire Magic Resist</div>
+                        <div class="sheet-col-1-6">
+                            <input type="number" name="attr_fire_mr" value="@{hidden_fire_mr}" disabled="disabled"/>
+                        </div>
+                        <div class="sheet-col-7-24">&nbsp;</div>
+                    </div>
+                    <input type="hidden" name="attr_hidden_fire_mr" value="0"/>
+
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-24">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-skill-name">Water Magic Resist</div>
+                        <div class="sheet-col-1-6">
+                            <input type="number" name="attr_water_mr" value="@{hidden_water_mr}" disabled="disabled"/>
+                        </div>
+                        <div class="sheet-col-7-24">&nbsp;</div>
+                    </div>
+                    <input type="hidden" name="attr_hidden_water_mr" value="0"/>
+
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-24">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-skill-name">Earth Magic Resist</div>
+                        <div class="sheet-col-1-6">
+                            <input type="number" name="attr_earth_mr" value="@{hidden_earth_mr}" disabled="disabled"/>
+                        </div>
+                        <div class="sheet-col-7-24">&nbsp;</div>
+                    </div>
+                    <input type="hidden" name="attr_hidden_earth_mr" value="0"/>
+
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-24">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-skill-name">Air Magic Resist</div>
+                        <div class="sheet-col-1-6">
+                            <input type="number" name="attr_air_mr" value="@{hidden_air_mr}" disabled="disabled"/>
+                        </div>
+                        <div class="sheet-col-7-24">&nbsp;</div>
+                    </div>
+                    <input type="hidden" name="attr_hidden_air_mr" value="0"/>
+                </div>
+
+                <!-- right column -->
+                <div class="sheet-col-1-2">
+                    <div class="sheet-row sheet-sub-header">
+                        <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-small-label">Stat</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
+                        <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
+                    </div>
+
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-24">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-skill-name">Ice Magic Resist</div>
+                        <div class="sheet-col-1-6">
+                            <input type="number" name="attr_ice_mr" value="@{hidden_ice_mr}" disabled="disabled"/>
+                        </div>
+                        <div class="sheet-col-7-24">&nbsp;</div>
+                    </div>
+                    <input type="hidden" name="attr_hidden_ice_mr" value="0"/>
+
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-24">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-skill-name">Lightning Magic Resist</div>
+                        <div class="sheet-col-1-6">
+                            <input type="number" name="attr_lightning_mr" value="@{hidden_lightning_mr}" disabled="disabled"/>
+                        </div>
+                        <div class="sheet-col-7-24">&nbsp;</div>
+                    </div>
+                    <input type="hidden" name="attr_hidden_lightning_mr" value="0"/>
+
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-24">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-skill-name">Light Magic Resist</div>
+                        <div class="sheet-col-1-6">
+                            <input type="number" name="attr_light_mr" value="@{hidden_light_mr}" disabled="disabled"/>
+                        </div>
+                        <div class="sheet-col-7-24">&nbsp;</div>
+                    </div>
+                    <input type="hidden" name="attr_hidden_light_mr" value="0"/>
+
+                    <div class="sheet-row sheet-skill-row">
+                        <div class="sheet-col-1-24">&nbsp;</div>
+                        <div class="sheet-col-1-2 sheet-skill-name">Dark Magic Resist</div>
+                        <div class="sheet-col-1-6">
+                            <input type="number" name="attr_dark_mr" value="@{hidden_dark_mr}" disabled="disabled"/>
+                        </div>
+                        <div class="sheet-col-7-24">&nbsp;</div>
+                    </div>
+                    <input type="hidden" name="attr_hidden_dark_mr" value="0"/>
+                </div>
+            </div>
+
             <h4 class="sheet-center">Specific Condition Resistances</h4>
             <div class="sheet-row sheet-padb">
                 <!-- left column -->
@@ -1240,7 +1343,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -1418,7 +1521,7 @@
                     <div class="sheet-row sheet-sub-header">
                         <div class="sheet-col-1-24 sheet-center sheet-small-label">&nbsp;</div>
                         <div class="sheet-col-1-2 sheet-small-label">Stat</div>
-                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Base Value</div>
+                        <div class="sheet-col-1-6 sheet-center sheet-small-label">Value</div>
                         <div class="sheet-col-7-24 sheet-center sheet-small-label">&nbsp;</div>
                     </div>
 
@@ -2813,6 +2916,8 @@
 
     </script>
 
+
+    <!-- Enable + and - logic when adjusting gold value -->
     <script type="text/worker">
         on('change:gp', function(eventInfo) {
             let new_value = eventInfo.newValue;
@@ -2907,7 +3012,26 @@
             {'attr': 'light_magic_pen', 'key': 'light magic pen', 'equation': '0'},
             {'attr': 'dark_magic_pen', 'key': 'dark magic pen', 'equation': '0'},
 
-            // Specific condition resist stats
+            // Specific magic resist stats (abbreviated)
+            {'attr': 'fire_mr', 'key': 'fire mr', 'equation': '0'},
+            {'attr': 'water_mr', 'key': 'water mr', 'equation': '0'},
+            {'attr': 'earth_mr', 'key': 'earth mr', 'equation': '0'},
+            {'attr': 'air_mr', 'key': 'air mr', 'equation': '0'},
+            {'attr': 'ice_mr', 'key': 'ice mr', 'equation': '0'},
+            {'attr': 'lightning_mr', 'key': 'lightning mr', 'equation': '0'},
+            {'attr': 'light_mr', 'key': 'light mr', 'equation': '0'},
+            {'attr': 'dark_mr', 'key': 'dark mr', 'equation': '0'},
+            // Specific magic resist stats (full name)
+            {'attr': 'fire_mr', 'key': 'fire magic resist', 'equation': '0'},
+            {'attr': 'water_mr', 'key': 'water magic resist', 'equation': '0'},
+            {'attr': 'earth_mr', 'key': 'earth magic resist', 'equation': '0'},
+            {'attr': 'air_mr', 'key': 'air magic resist', 'equation': '0'},
+            {'attr': 'ice_mr', 'key': 'ice magic resist', 'equation': '0'},
+            {'attr': 'lightning_mr', 'key': 'lightning magic resist', 'equation': '0'},
+            {'attr': 'light_mr', 'key': 'light magic resist', 'equation': '0'},
+            {'attr': 'dark_mr', 'key': 'dark magic resist', 'equation': '0'},
+
+            // Specific condition resist stats (abbreviated)
             {'attr': 'bleeding_cr', 'key': 'bleeding cr', 'equation': '0'},
             {'attr': 'blinded_cr', 'key': 'blinded cr', 'equation': '0'},
             {'attr': 'burned_cr', 'key': 'burned cr', 'equation': '0'},
@@ -2931,6 +3055,30 @@
             {'attr': 'stunned_cr', 'key': 'stunned cr', 'equation': '0'},
             {'attr': 'taunted_cr', 'key': 'taunted cr', 'equation': '0'},
             {'attr': 'weakened_cr', 'key': 'weakened cr', 'equation': '0'},
+            // Specific condition resist stats (full name)
+            {'attr': 'bleeding_cr', 'key': 'bleeding condition resist', 'equation': '0'},
+            {'attr': 'blinded_cr', 'key': 'blinded condition resist', 'equation': '0'},
+            {'attr': 'burned_cr', 'key': 'burned condition resist', 'equation': '0'},
+            {'attr': 'charmed_cr', 'key': 'charmed condition resist', 'equation': '0'},
+            {'attr': 'confused_cr', 'key': 'confused condition resist', 'equation': '0'},
+            {'attr': 'crippled_cr', 'key': 'crippled condition resist', 'equation': '0'},
+            {'attr': 'cursed_cr', 'key': 'cursed condition resist', 'equation': '0'},
+            {'attr': 'decreased_stats_cr', 'key': 'decreased stats condition resist', 'equation': '0'},
+            {'attr': 'fear_cr', 'key': 'fear condition resist', 'equation': '0'},
+            {'attr': 'frozen_cr', 'key': 'frozen condition resist', 'equation': '0'},
+            {'attr': 'helpless_cr', 'key': 'helpless condition resist', 'equation': '0'},
+            {'attr': 'immobilized_cr', 'key': 'immobilized condition resist', 'equation': '0'},
+            {'attr': 'knocked_down_prone_cr', 'key': 'knocked down prone condition resist', 'equation': '0'},
+            {'attr': 'knocked_up_airborne_cr', 'key': 'knocked up airborne condition resist', 'equation': '0'},
+            {'attr': 'paralyzed_cr', 'key': 'paralyzed condition resist', 'equation': '0'},
+            {'attr': 'petrified_cr', 'key': 'petrified condition resist', 'equation': '0'},
+            {'attr': 'poisoned_cr', 'key': 'poisoned condition resist', 'equation': '0'},
+            {'attr': 'silenced_cr', 'key': 'silenced condition resist', 'equation': '0'},
+            {'attr': 'sleeping_cr', 'key': 'sleeping condition resist', 'equation': '0'},
+            {'attr': 'slowed_cr', 'key': 'slowed condition resist', 'equation': '0'},
+            {'attr': 'stunned_cr', 'key': 'stunned condition resist', 'equation': '0'},
+            {'attr': 'taunted_cr', 'key': 'taunted condition resist', 'equation': '0'},
+            {'attr': 'weakened_cr', 'key': 'weakened condition resist', 'equation': '0'},
         ];
 
         String.prototype.format = function() {
@@ -3222,8 +3370,6 @@
                 });
             });
         });
-
-
     </script>
 
 
@@ -3951,6 +4097,13 @@ Desired example
           Dark - black
           Healing - pink
         -->
+
+        {{#general}}
+        <tr style="background:#FFB27F;">
+            <td class="template_label">General:</td>
+            <td class="template_value">{{general}}</td>
+        </tr>
+        {{/general}}
 
         {{#physical}}
         <tr style="background:#FFB27F;">
